[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ownjoo-toolkit"
version = "0.1.0"
description = "Centralized shared utilities for ownjoo-org projects: type validation, data parsing, and progress logging"
authors = [
    { name = "ownjoo-org", email = "speedy@ownjoo.org" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["utilities", "validation", "parsing", "logging", "generators"]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/ownjoo-org/utils"
Repository = "https://github.com/ownjoo-org/utils"
"Bug Tracker" = "https://github.com/ownjoo-org/utils/issues"
Changelog = "https://github.com/ownjoo-org/utils/releases"
Documentation = "https://github.com/ownjoo-org/utils#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pylint>=2.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
]
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "build",
    "dist",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --tb=short"
markers = [
    "integration: integration tests",
    "unit: unit tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Not required for this project
ignore_missing_imports = true
